src/test/resources/testinput/parsable/symtab/invalid_coco/optionalOperators.ocl
/* (c) https://github.com/MontiCore/monticore */
package invariants;

ocl optionalOperators {
  inv(Optional<Integer> a, int b):
    a ?: 5 == b &&
    a ?> b &&
    a ?>= b &&
    a ?< b &&
    a ?<= b &&
    a ?== b &&
    a ?!= b;
}
